--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gradegenius",
-  "homepage": "https://sayidmushtaq.github.io/GradeGenius",
+  "homepage": "https://sayidmushtaq.github.io/GradeGenius/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
